<resources>
    <string name="app_name">Anurag Affection </string>
    <string name="hello">Hello World  </string>
    <string name="aa">A A </string>
    <string name="anu"> Anurag Affection </string>
    <string name="next">More Info</string>
    <string name="result">Result of Bundle Passing</string>
    <string name="wlcmText">Welcome To Anurag Affection</string>
    <string name="javaDsa">Java DSA Practise </string>
    <string name="javaSln">Hacker Rank Java Solution</string>
    <string name="javaDsaSln">Hacker Rank Data Structure</string>
    <string name="javaDsaSln2">Hacker Rank Algorithm</string>
    <string name="anim">Android Animations</string>
    <string name="txtAnu">Anurag Affection</string>
    <string name="btnTranslate">Translate Animation</string>
    <string name="btnAlpha">Alpha Transition</string>
    <string name="btnRotate">Rotate Animations</string>
    <string name="btnScale">Scale Animations</string>
    <string name="lottie">Lottie Animations</string>
    <string name="txtLottie">About Lottie Animations</string>
    <string name="txtSpinner">Select an ID Proof</string>
    <string name="btnListView">List  View</string>
    <string name="search">Search Programming Languages</string>
    <string name="txtCard">"About Card View "</string>
    <string name="imgContact">Contact Image</string>
    <string name="txtName">Contact Name</string>
    <string name="txtNumber">Contact Number</string>
    <string name="addContact">Add Contact</string>
    <string name="contactName">Contact Name</string>
    <string name="contactNumber">Contact Number</string>
    <string name="save">"Save "</string>
    <string name="new1"> "New" </string>
    <string name="open">Open</string>
    <string name="opt_contact">Contact</string>
    <string name="opt_delete">Delete</string>
    <string name="opt_save">Save</string>
    <string name="confirm">Confirm</string>
    <string name="txtMe">Text Message </string>
    <string name="proceed">\"Yes, You can proceed now \"</string>
    <string name="success">Success</string>
    <string name="order">Your order has been placed</string>
    <string name="okay">Okay</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="FragA">FragA</string>
    <string name="FragB">FragB</string>
    <string name="FragC">FragC</string>
    <string name="home">Home</string>
    <string name="profile">My Profile</string>
    <string name="utility">Utility</string>
    <string name="nav_search">Search</string>
    <string name="contactUs">Contact</string>
    <string name="anuEmail">anuragaffection07@gmail.com</string>
    <string name="openDrawer">Open Drawer Navigation</string>
    <string name="closeDrawer">Close Drawer Navigation</string>
    <string name="title_activity_google_map_learn">googleMapLearn</string>
    <string name="login">"Login Here "</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <string name="play">Play</string>
    <string name="prevAcceleration">Previous Acceleration</string>
    <string name="CurrentAcceleration">Current Acceleration</string>
    <string name="Acceleration">Acceleration</string>
</resources>