<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/home"
        />

    <item
        android:id="@+id/nav_search"
        android:icon="@drawable/baseline_search_24"
        android:title="@string/nav_search"
        />

    <item
        android:id="@+id/nav_utility"
        android:icon="@drawable/baseline_settings_24"
        android:title="@string/utility"
        />

    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/anuragaffection"
        android:title="@string/profile"
        />

    <item
        android:id="@+id/nav_contact"
        android:icon="@drawable/baseline_contact_mail_24"
        android:title="@string/contactUs"
        />


</menu>