<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/opt_new"
        android:icon="@drawable/baseline_fiber_new_24"
        android:title="@string/new1"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/opt_open"
        android:icon="@drawable/baseline_open_in_browser_24"
        android:title="@string/open"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/opt_save"
        android:icon="@drawable/baseline_save_24"
        android:title="@string/opt_save"
        />

    <item
        android:id="@+id/opt_delete"
        android:icon="@drawable/baseline_delete_24"
        android:title="@string/opt_delete"
        />

    <item
        android:id="@+id/opt_contact"
        android:icon="@drawable/baseline_contact_mail_24"
        android:title="@string/opt_contact"
        />


</menu>