<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Animations">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtAnu"
        android:text="@string/txtAnu"
        android:layout_marginTop="75sp"
        android:layout_marginBottom="5sp"
        android:layout_alignTop="@+id/btnTranslate"
        android:layout_centerHorizontal="true"
        android:textSize="35sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        tools:ignore="NotSibling" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">


        <Button
            android:id="@+id/btnTranslate"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:backgroundTint="@color/yellow"
            android:padding="8sp"
            android:text="@string/btnTranslate" />

        <Button
            android:id="@+id/btnAlpha"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:backgroundTint="@color/teal_200"
            android:padding="8sp"
            android:text="@string/btnAlpha" />

        <Button
            android:id="@+id/btnScale"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:backgroundTint="@color/yellow"
            android:text="@string/btnScale" />

        <Button
            android:id="@+id/btnRotate"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:backgroundTint="@color/teal_200"
            android:text="@string/btnRotate" />


    </LinearLayout>

</RelativeLayout>