<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    >

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:cardCornerRadius="7sp"
        android:layout_margin="1sp"
        app:cardUseCompatPadding="true"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="1sp"
            android:paddingRight="1sp"
            android:paddingBottom="5sp"
            android:orientation="vertical"
            >



                <TextView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:gravity="center"
                   android:text="@string/addContact"
                   android:id="@+id/addContact"
                   android:layout_margin="5sp"
                   android:textStyle="bold"
                   android:textColor="@color/black"
                   android:textSize="32sp"/>


            <EditText
                android:id="@+id/contactName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="11sp"
                android:hint="@string/contactName"
                android:inputType="text"
                android:minHeight="48dp"
                android:padding="11sp"
                android:autofillHints="Anurag Affection" />


            <EditText
                android:id="@+id/contactNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12sp"
                android:hint="@string/contactNumber"
                android:inputType="number"
                android:minHeight="48dp"
                android:padding="11sp"
                android:autofillHints="9876543210" />


                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/save"
                    android:textStyle="bold"
                    android:id="@+id/btnSave"
                    android:layout_gravity="end"
                    android:layout_marginEnd="17sp"
                    />


        </LinearLayout>


    </androidx.cardview.widget.CardView>


</LinearLayout>