<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:src="@drawable/baseline_cloud_done_24"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/imgCloud"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/imgCloud"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/success"
            android:textSize="34sp"
            android:id="@+id/success"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/blue"
            android:layout_marginTop="11dp"
            android:layout_marginStart="11sp"
            app:layout_constraintTop_toBottomOf="@id/imgCloud"

            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/order"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:id="@+id/order"
            android:gravity="center"
            android:layout_marginTop="11dp"
            android:layout_marginStart="11sp"
            android:layout_marginBottom="22dp"
            app:layout_constraintTop_toBottomOf="@id/success"

            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/okay"
            android:textSize="24dp"
            android:id="@+id/btnOkay"
            android:textColor="@color/white"
            android:backgroundTint="@color/blue"
            />



    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>